main/ref -> refactor context (replace *gin.Context -> context.Context), added unique links to files, added Pagination func
